# Atari-RL

./: .gitignore  README.md  dqn.py  hello.py  play.py  pyproject.toml  train.py  utils.py
dqn_atari/agents/: c51_agent.py  double_dqn_agent.py  dqn_agent.py  nstep_dqn_agent.py  per_dqn_agent.py  rainbow_agent.py  rainbow_loss.py
dqn_atari/evaluation/: play.py
dqn_atari/models/: c51_dqn.py  dueling_dqn.py  noisy_dqn.py  noisy_layer.py  rainbow_dqn.py
dqn_atari/replay/: buffer.py  nstep_buffer.py  prioritized_buffer.py
dqn_atari/training/: train_c51_dqn.py  train_double_dqn.py  train_dqn.py  train_dueling_dqn.py  train_noisy_dqn.py  train_nstep_dqn.py  train_per_dqn.py  train_rainbow_dqn.py
scripts/: play.py  train_c51_dqn.py  train_double_dqn.py  train_dqn.py  train_dueling_dqn.py  train_noisy_dqn.py  train_nstep_dqn.py  train_per_dqn.py  train_rainbow_dqn.py
