[project]
name = "dqn-atari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium>=1.2.3",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "setuptools<81",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
]
